<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegTitulo"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/etUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegUsr" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegCorreoElec"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegContraseña"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegConfContraseña"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegReg"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegLginRedirect"
        android:textColor="@android:color/holo_blue_light"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
