<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_addiction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAdictionActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/regadd_title"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/reg_add_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Selector de Adicción -->
    <RadioGroup
        android:id="@+id/regadd_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/regadd_title"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/regadd_radio_button_drunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_add_drunk" />
        <RadioButton
            android:id="@+id/regaddradio_button_smoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_add_smoke" />
        <RadioButton
            android:id="@+id/regaddradio_button_drugs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_add_drugs" />
        <RadioButton
            android:id="@+id/regaddradio_button_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_add_other" />
    </RadioGroup>

    <EditText
        android:id="@+id/regadd_edit_addiction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:hint="@string/reg_add_hint"
        app:layout_constraintTop_toBottomOf="@id/regadd_title"/>

    <!-- Boton Anterior -->
    <Button
        android:id="@+id/regadd_button_back"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <!-- Boton Terminar -->
    <Button
        android:id="@+id/regadd_button_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>