<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="fill_vertical"
    android:id="@+id/post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Menú superior -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/post_upper_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/colorPrimary"
            android:padding="10dp"
            android:orientation="horizontal">
            <!-- Botón Atrás -->
            <ImageButton
                android:id="@+id/post_button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="?attr/editTextColor" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Contenido principal -->
        <ScrollView
            android:id="@+id/post_middle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/post_upper_menu"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/post_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newPostDesc"
                    android:textStyle="italic|bold"
                    android:gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_marginVertical="15dp"
                    app:layout_constraintTop_toTopOf="parent"/>
                <!-- Ingresar el contenido de la nueva publicación -->
                <EditText
                    android:id="@+id/post_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newPostHint"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/post_desc"/>
                <View
                    android:id="@+id/post_content_separator"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?attr/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/post_edit_text"
                    app:layout_constraintBottom_toTopOf="@id/post_cat_desc"
                    android:layout_marginVertical="20dp"/>
                <!-- Seleccionar una categoría -->
                <TextView
                    android:id="@+id/post_cat_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newPostCatDescription"
                    android:textStyle="italic|bold"
                    android:gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toBottomOf="@id/post_content_separator"
                    app:layout_constraintBottom_toTopOf="@id/post_radio_group"/>
                <RadioGroup
                    android:id="@+id/post_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    app:layout_constraintTop_toBottomOf="@id/post_cat_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <RadioButton
                        android:id="@+id/post_radio_button_support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newPostCatSupport" />
                    <RadioButton
                        android:id="@+id/post_radio_button_celebration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newPostCatCelebration" />
                    <RadioButton
                        android:id="@+id/post_radio_button_sad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newPostCatSad" />
                    <RadioButton
                        android:id="@+id/post_radio_button_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newPostCatOther" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <!-- Botón agregar publicación -->
        <ImageView
            android:id="@+id/post_add_background"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/opacy_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?attr/colorPrimary" />
        <ImageButton
            android:id="@+id/post_button_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="@+id/post_add_background"
            app:layout_constraintEnd_toEndOf="@+id/post_add_background"
            app:layout_constraintStart_toStartOf="@+id/post_add_background"
            app:layout_constraintTop_toTopOf="@+id/post_add_background"
            app:tint="?attr/editTextColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>