<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:layout_marginVertical="8dp"
            android:padding="10dp">
            <TextView
                android:id="@+id/post_text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postAuthor"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/post_text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postDate"
                android:textStyle="normal"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <View
                android:id="@+id/post_separator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?attr/colorPrimary"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/post_text_author"/>
            <TextView
                android:id="@+id/post_text_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postContent"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/post_separator"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

</LinearLayout>